# bandersnatch-vrfs-spec

./: Makefile  README.md  references.bib  specification.md  specification.tex
assets/example/: Cargo.toml
assets/example/src/: main.rs
assets/padding/: Cargo.toml
assets/padding/src/: main.rs
assets/points/: Cargo.toml
assets/points/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
