[package]
name = "ark-ec-vrfs-bandersnatch-example"
version = "0.2.0"
edition = "2021"

[dependencies]
ark-ec-vrfs ={ git = "https://github.com/davxy/ark-ec-vrfs", rev = "f83083c", features = ["bandersnatch", "ring"] }
hex = "0.4.3"

# Deterministic ring proof.
# WARNING: not for production, used to produce specification test vectors.
[features]
test-vectors = ["ark-ec-vrfs/test-vectors"]
