[package]
name = "ark-ec-vrfs-bandersnatch-example"
version = "0.1.1"
edition = "2021"

[dependencies]
ark-ec-vrfs ={ version = "0.1.2", features = ["bandersnatch", "ring"] }
hex = "0.4.3"

# Deterministic ring proof.
# WARNING: not for production, used to produce specification test vectors.
[features]
test-vectors = ["ark-ec-vrfs/test-vectors"]
