[package]
name = "ark-vrf-bandersnatch-example"
version = "0.1.0"
edition = "2021"
publish =  false

[dependencies]
ark-vrf ={ version = "0.1.0", features = ["bandersnatch", "ring"] }
hex = "0.4.3"

# Deterministic ring proof.
# WARNING: not for production, used to produce specification test vectors.
[features]
test-vectors = ["ark-vrf/test-vectors"]
